force-app/main/default/objects/Playbook__c/fields/Date_Deactivated__c.field-meta.xml
<CustomField>
    <fullName>Date_Deactivated__c</fullName>
    <label>Date Deactivated</label>
    <type>Date</type>
</CustomField>