force-app/main/default/objects/Playbook__c/fields/Distribution_Group__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the Distribution Group that this playbook should use when Automatically creating a Playbook Case.</inlineHelpText>
    <label>Distribution Group</label>
    <referenceTo>Distribution_Group__c</referenceTo>
    <relationshipLabel>Playbooks</relationshipLabel>
    <relationshipName>Playbooks</relationshipName>
    <type>Lookup</type>
</CustomField>