force-app/main/default/objects/Playbook__c/validationRules/Play_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Play_Limit</fullName>
    <active>true</active>
    <description>Limits the number of plays to 10 or less</description>
    <errorConditionFormula>Number_of_Plays__c &gt; 10</errorConditionFormula>
    <errorMessage>You cannot add more than 10 plays</errorMessage>
</ValidationRule>