force-app/main/default/objects/Playbook__c/validationRules/Reactivation_not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Reactivation_not_allowed</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISBLANK( Date_Deactivated__c )),  Active__c = true)</errorConditionFormula>
    <errorMessage>You cannot activate a Playbook that was previously active</errorMessage>
</ValidationRule>