force-app/main/default/objects/Playbook__c/listViews/Active_Playbooks.listView-meta.xml
<ListView>
    <fullName>Active_Playbooks</fullName>
    <columns>NAME</columns>
    <columns>Date_Activated__c</columns>
    <columns>Number_of_Plays__c</columns>
    <columns>Survey_to_be_Sent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Playbooks</label>
</ListView>